making use of the encryption class here.